--- a/tasks/brew.yml
+++ b/tasks/brew.yml
@@ -50,16 +50,16 @@
 
 - name: Installing Homebrew Cask Packages
   homebrew_cask:
-    name: "{{ brew_cask_packages }}"
+    name: "{{ brew_cask_packages.personal }}"
     state: present
   register: result
   until: result is successful
-  when: brew_cask_packages is defined and homebrew_check.stat.exists
+  when: brew_cask_packages.personal is defined and homebrew_check.stat.exists
 
 - name: Installing Homebrew Packages
   homebrew:
-    name: "{{ brew_packages }}"
+    name: "{{ brew_packages.personal }}"
     state: present
   register: result
   until: result is successful
-  when: brew_packages is defined and homebrew_check.stat.exists
+  when: brew_packages.personal is defined and homebrew_check.stat.exists
