--- a/tasks/dev/ssh.yml
+++ b/tasks/dev/ssh.yml
@@ -7,11 +7,31 @@
     - dotfiles
     - install
     - ssh
+
+- name: Check if ssh private key exists
+  stat:
+    path: "{{ dest_key }}"
+  register: ssh_private_exists
+  tags:
+    - dotfiles
+    - install
+    - ssh
+
 - name: Install ssh key
   copy:
     src: "{{ source_key }}"
     dest: "{{ dest_key }}"
     mode: 0600
+  when: not ssh_private_exists.stat.exists
+  tags:
+    - dotfiles
+    - install
+    - ssh
+
+- name: Check if ssh pub key exists
+  stat:
+    path: "{{ dest_key }}"
+  register: ssh_pub_exists
   tags:
     - dotfiles
     - install
@@ -22,6 +42,7 @@
     src: "{{ source_key }}.pub"
     dest: "{{ dest_key }}.pub"
     mode: 0644
+  when: not ssh_pub_exists.stat.exists
   tags:
     - dotfiles
     - install
@@ -34,13 +55,16 @@
     key: "{{ lookup('file', item) }}"
   with_fileglob:
     - "{{ lookup('env', 'HOME') }}/.ssh/*.pub"
+  when: not ssh_private_exists.stat.exists and not ssh_pub_exists.stat.exists
 
 - name: Add SSH Key to agent
   shell: ssh-add ~/.ssh/id_rsa
+  when: not ssh_private_exists.stat.exists and not ssh_pub_exists.stat.exists
 
 - name: Add GitHub to known hosts
-  shell:
-    ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+  shell: ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+  when:
+    not ssh_private_exists.stat.exists and not ssh_pub_exists.stat.exists
 
     # - name: Check if Agent Forwarding is allowed
     # shell: grep -c "^AllowAgentForwarding yes" /etc/ssh/sshd_config || true
